--- a/CsoundForAndroid/CsoundForAndroid/CsoundApplication/build.gradle
+++ b/CsoundForAndroid/CsoundForAndroid/CsoundApplication/build.gradle
@@ -28,6 +28,7 @@ android {
         debug {
             minifyEnabled false
             debuggable true
+            jniDebuggable true
         }
     }
     productFlavors {
