Oops, construct cmask::scanner in the opcode init function (#23).

--- a/Opcodes/cmask/CMakeLists.txt
+++ b/Opcodes/cmask/CMakeLists.txt
@@ -32,3 +32,4 @@ set(CMASK_OPCODE_SOURCES cmask_opcodes.cpp)
 make_plugin(cmask_opcodes ${CMASK_OPCODE_SOURCES})
 set_target_properties(cmask_opcodes PROPERTIES COMPILE_FLAGS "-fPIC -std=c++11 -Wno-multichar")
 target_include_directories(cmask_opcodes PRIVATE ${CMAKE_CURRENT_SOURCE_DIR}/../../dependencies/csound/include ${CMASK_SOURCE_DIRECTORY})
+target_compile_definitions(cmask_opcodes PRIVATE D_IRIX)
