--- a/CsoundForAndroid/CsoundForAndroid/CsoundApplication/src/main/AndroidManifest.xml
+++ b/CsoundForAndroid/CsoundForAndroid/CsoundApplication/src/main/AndroidManifest.xml
@@ -10,6 +10,8 @@
     <uses-permission android:name="android.permission.READ_LOGS"/>
     <uses-permission android:name="android.permission.INTERNET"/>
     <uses-permission android:name="android.permission.INTERACT_ACROSS_USERS_FULL" android:protectionLevel="signature"/>
+    <uses-permission android:name="android.permission.ACCESS_WIFI_STATE"/>
+    <uses-permission android:name="android.permission.CHANGE_WIFI_STATE"/>
     <application
         android:icon="@drawable/cs"
         android:hardwareAccelerated="true"
