Must have missed a push.

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -36,7 +36,19 @@ add_definitions(-DUSE_DOUBLE)
 set(USE_DOUBLE "Yes")
 configure_file(${CMAKE_SOURCE_DIR}/dependencies/csound/include/float-version.h.in ${CMAKE_CURRENT_BINARY_DIR}/float-version.h)
 set(QT_INSTALL_PREFIX "/usr")
-set(QMAKE "qmake")
+# If you have a local installation of the Qt SDK, set an environment variable 
+# QMAKE with the pathname to your local qmake.
+if(DEFINED ENV{QMAKE})
+    set(QMAKE $ENV{QMAKE})
+else()
+    set(QMAKE "qmake")
+endif()
+if(DEFINED ENV{Qt5_Dir})
+    set(QMAKE $ENV{QMAKE})
+else()
+    set(QMAKE "qmake")
+endif()
+message("Using qmake: ${QMAKE}.")
 set(CSOUND_INCLUDE_PATH "${CMAKE_SOURCE_DIR}/dependencies/csound/include")
 message(STATUS "CSOUND_INCLUDE_PATH: ${CSOUND_INCLUDE_PATH}")
 set(VSTSDK2X_INCLUDE_DIR "${CMAKE_SOURCE_DIR}/dependencies/VST_SDK/VST2_SDK")
