--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -43,10 +43,10 @@ if(DEFINED ENV{QMAKE})
 else()
     set(QMAKE "qmake")
 endif()
-if(DEFINED ENV{Qt5_Dir})
-    set(QMAKE $ENV{QMAKE})
-else()
-    set(QMAKE "qmake")
+message("Using qmake: ${QMAKE}.")
+if(DEFINED ENV{Qt5_DIR})
+    set(Qt5_DIR $ENV{Qt5_DIR})
+    message("Using Qt5_DIR: ${Qt5_DIR}.")
 endif()
 message("Using qmake: ${QMAKE}.")
 set(CSOUND_INCLUDE_PATH "${CMAKE_SOURCE_DIR}/dependencies/csound/include")
@@ -84,7 +84,7 @@ option(BUILD_DSSI_OPCODES "Build the DSSI opcodes" ON)
 option(BUILD_CSOUND_VST "Build Csound as a VST plugin" ON)
 option(BUILD_EMUGENS_OPCODES "Build emugens opcodes" ON)
 option(BUILD_EXCITER_OPCODES "Build the exciter opcode" ON)
-option(BUILD_FAUST_OPCODES "Build the Faust opcodes" ON)
+option(BUILD_FAUST_OPCODES "Build the Faust opcodes" OFF)
 option(BUILD_FLUID_OPCODES "Build the fluidsynth opcodes" ON)
 option(BUILD_FRAMEBUFFER_OPCODES "Build the framebuffer opcodes" ON)
 option(BUILD_IMAGE_OPCODES "Build the image opcodes" ON)
