--- a/docs/package.json
+++ b/docs/package.json
@@ -1,31 +1,13 @@
 {
-<<<<<<< HEAD
-<<<<<<< HEAD
-  "main": "scrims.html",
-  "name": "scrims",
-=======
-  "main": "message.html",
-  "name": "message",
->>>>>>> develop
-=======
-  "main": "scrims.html",
-  "name": "scrims",
->>>>>>> develop
+  "main": "cmask.html",
+  "name": "cmask",
   "description": "HTML5 with Csound",
   "version": "0.1.0",
   "keywords": [ "Csound", "node-webkit" ],
   "nodejs": true,
   "node-remote": "http://<all-urls>/*",
   "window": {
-<<<<<<< HEAD
-<<<<<<< HEAD
-    "title": "scrims",
-=======
-    "title": "message",
->>>>>>> develop
-=======
-    "title": "scrims",
->>>>>>> develop
+    "title": "cmask",
     "icon": "link.png",
     "toolbar": false,
     "frame": false,
