--- a/CsoundForAndroid/CsoundForAndroid/CsoundApplication/src/main/AndroidManifest.xml
+++ b/CsoundForAndroid/CsoundForAndroid/CsoundApplication/src/main/AndroidManifest.xml
@@ -36,5 +36,8 @@
             android:name=".SettingsActivity"
             android:label="@string/app_name">
         </activity>
+        <service
+            android:name=".CsoundService"
+            android:stopWithTask="true"/>
     </application>
 </manifest>
