--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -208,9 +208,10 @@ set(CPACK_DEBIAN_PACKAGE_MAINTAINER "Michael Gogins <michael.gogins@gmail.com>")
 set(CPACK_DEBIAN_PACKAGE_DESCRIPTION "Extends Csound with CsoundVST, CsoundHtml5, and CsoundAC.")
 set(CPACK_PACKAGE_NAME "csound-extended")
 set(CPACK_PACKAGE_CONTACT "csound-devel@listserv.heanet.ie")
-set(CPACK_PACKAGE_VERSION_MAJOR "0")
-set(CPACK_PACKAGE_VERSION_MINOR "1")
-set(CPACK_PACKAGE_VERSION_PATCH "2-beta")
+## set(CPACK_PACKAGE_VERSION_MAJOR "0")
+## set(CPACK_PACKAGE_VERSION_MINOR "1")
+## set(CPACK_PACKAGE_VERSION_PATCH "2")
+set(CPACK_PACKAGE_VERSION "$ENV{CSOUND_EXTENDED_VERSION}")
 set(CPACK_STRIP_FILES "YES")
 set(CPACK_DEB_COMPONENT_INSTALL "ON")   
 set(CPACK_DEBIAN_PACKAGE_DEPENDS "")
