--- a/CsoundForAndroid/CsoundForAndroid/CsoundApplication/src/main/AndroidManifest.xml
+++ b/CsoundForAndroid/CsoundForAndroid/CsoundApplication/src/main/AndroidManifest.xml
@@ -38,6 +38,8 @@
         </activity>
         <service
             android:name=".CsoundService"
+            android:label="@string/app_name"
+            android:exported="false"
             android:stopWithTask="true"/>
     </application>
 </manifest>
