--- a/CsoundVst/CMakeLists.txt
+++ b/CsoundVst/CMakeLists.txt
@@ -56,7 +56,7 @@ if(BUILD_CSOUND_VST)
 
     install(TARGETS CsoundVST
         RUNTIME DESTINATION ${LIBRARY_INSTALL_DIR}
-        LIBRARY DESTINATION ${LIBRARY_INSTALL_DIR}
+        LIBRARY DESTINATION ${LIBRARY_INSTALL_DIR}/vst
         ARCHIVE DESTINATION ${LIBRARY_INSTALL_DIR})
 
     install(TARGETS csoundvstmain
