Adding convenience script.

--- a/.SciTEUser.properties
+++ b/.SciTEUser.properties
@@ -1860,13 +1860,14 @@ command.name.4.*=Render piece to soundfile and post-process and play
 command.4.*=g++ --std=c++17 -lstdc++fs -Wno-write-strings -O2 -g "$(FilePath)" -o$(FileName) -I/usr/local/include/csound -lCsoundAC -lcsnd6 -lcsound64 -lsndfile -lpthread -lm && ./$(FileName) --csound --post --playwav audacity
 
 # Custom commands for running Csound to dac or soundfile with or without post-processing.
+# It is assumed that the csd filename + .wav becomes the output soundfile and that the root 
+# of the csd filename, with - or _ replaced by spaces, is the title of the piece.
 
 command.name.5.*=Render csd to audio
-command.5.*=g++ --std=c++17 -lstdc++fs -Wno-write-strings -O2 -g "$(FilePath)" -o$(FileName) -I/usr/local/include/csound -lCsoundAC -lcsnd6 -lcsound64 -lsndfile -lpthread -lm && ./$(FileName) --csound --audio PortAudio --device dac
+command.5.*=csound "$(FilePath)" -odac
 command.name.6.*=Render csd to soundfile and play
-command.6.*=g++ --std=c++17 -lstdc++fs -Wno-write-strings -O2 -g "$(FilePath)" -o$(FileName) -I/usr/local/include/csound -lCsoundAC -lcsnd6 -lcsound64 -lsndfile -lpthread -lm && ./$(FileName) --csound 
+command.6.*=csound "$(FilePath)" -o$(FilePath).wav && audacity $(FilePath).wav
 command.name.7.*=Render csd to soundfile and post-process and play 
-command.7.*=g++ --std=c++17 -lstdc++fs -Wno-write-strings -O2 -g "$(FilePath)" -o$(FileName) -I/usr/local/include/csound -lCsoundAC -lcsnd6 -lcsound64 -lsndfile -lpthread -lm && ./$(FileName) --csound --post --playwav audacity
-
+command.7.*=csound "$(FilePath)" -o$(FilePath).wav && audacity $(FilePath).wav && python /home/mkg/csound-extended/post-process.py $(FilePath).wav && audacity $(FilePath).norm.wav
 
 
