--- a/.SciTEUser.properties
+++ b/.SciTEUser.properties
@@ -1868,6 +1868,6 @@ command.5.*=csound "$(FilePath)" -odac
 command.name.6.*=Render csd to soundfile and play
 command.6.*=csound "$(FilePath)" -o$(FilePath).wav && audacity $(FilePath).wav
 command.name.7.*=Render csd to soundfile and post-process and play 
-command.7.*=csound "$(FilePath)" -o$(FilePath).wav && audacity $(FilePath).wav && python /home/mkg/csound-extended/post-process.py $(FilePath).wav && audacity $(FilePath).norm.wav
+command.7.*=csound "$(FilePath)" -o$(FilePath).wav && python /home/mkg/csound-extended/post-process.py $(FilePath).wav
 
 
