--- a/.SciTEUser.properties
+++ b/.SciTEUser.properties
@@ -104,7 +104,7 @@ if PLAT_MAC
 #whitespace.back=#FFF0F0
 #error.marker.fore=#0000A0
 #error.marker.back=#DADAFF
-#error.inline=1
+error.inline=0
 #bookmark.fore=#808000
 #bookmark.back=#FFFFA0
 #bookmark.alpha=
@@ -1196,9 +1196,6 @@ style.ruby.34=fore:$(colour.red),bold,back:$(colour.base01)
 style.ruby.35=fore:$(colour.red),bold,back:$(colour.base01)
 
 
-#style.errorlist.32=$(font.small),back:#000000
-style.errorlist.0=fore:green
-
 ################################################################################
 # Dark SciTE color theme
 # 
@@ -1419,6 +1416,58 @@ style.hypertext.2=fore:#FF0000
 style.hypertext.3=fore:#008080
 # Unknown Attributes
 style.hypertext.4=fore:#FF0000
+
+# Error list styles
+
+style.errorlist.32=fore:green,$(font.small)
+# Default
+style.errorlist.0=fore:green
+# python Error
+style.errorlist.1=fore:#FF0000
+# gcc Error
+style.errorlist.2=fore:#F55FF5
+# Microsoft Error
+style.errorlist.3=fore:#808000
+# command or return status
+style.errorlist.4=fore:#0000FF
+# Borland error and warning messages
+style.errorlist.5=fore:#B06000
+# perl error and warning messages
+style.errorlist.6=fore:#FF0000
+# .NET tracebacks
+style.errorlist.7=fore:#FF0000
+# Lua error and warning messages
+style.errorlist.8=fore:#FF0000
+# ctags
+style.errorlist.9=fore:#FF00FF
+# diff changed !
+style.errorlist.10=fore:#007F00
+# diff addition +
+style.errorlist.11=fore:#00007F
+# diff deletion -
+style.errorlist.12=fore:#007F7F
+# diff message ---
+style.errorlist.13=fore:#7F0000
+# PHP error
+style.errorlist.14=fore:#FF0000
+# Essential Lahey Fortran 90 error
+style.errorlist.15=fore:#FF0000
+# Intel Fortran Compiler error
+style.errorlist.16=fore:#FF0000
+# Intel Fortran Compiler v8.0 error/warning
+style.errorlist.17=fore:#FF0000
+# Absoft Pro Fortran 90/95 v8.2 error or warning
+style.errorlist.18=fore:#FF0000
+# HTML Tidy
+style.errorlist.19=fore:#FF0000
+# Java runtime stack trace
+style.errorlist.20=fore:#FF0000
+# Text matched with find in files and message part of GCC errors
+style.errorlist.21=fore:#FF0000
+# Ensures that spacing is not affected by line number styles
+style.errorlist.33=$(font.small)
+
+lexer.errorlist.value.separate=1
 
 #################### Csound properties
 
@@ -1848,26 +1897,26 @@ command.go.subsystem.*.inc=0
 # Each piece must be one C++ file; this is not much of a limitation.
 # If other libraries turn out to be needed just stick them on the link line here.
 
-command.name.0.*=Build piece
+command.name.0.*=Build C++ piece
 command.0.*=g++ --std=gnu++17 -lstdc++fs -Wno-write-strings -O2 -g "$(FilePath)" -o$(FileName) -I/usr/local/include/csound -lCsoundAC -lcsnd6 -lcsound64 -lsndfile -lpthread -lm
-command.name.1.*=Render piece to audio
+command.name.1.*=Render C++ piece to audio
 command.1.*=g++ --std=c++17 -lstdc++fs -Wno-write-strings -O2 -g "$(FilePath)" -o$(FileName) -I/usr/local/include/csound -lCsoundAC -lcsnd6 -lcsound64 -lsndfile -lpthread -lm && ./$(FileName) --csound --audio PortAudio --device dac
-command.name.2.*=Render piece to soundfile
+command.name.2.*=Render C++ piece to soundfile
 command.2.*=g++ --std=c++17 -lstdc++fs -Wno-write-strings -O2 -g "$(FilePath)" -o$(FileName) -I/usr/local/include/csound -lCsoundAC -lcsnd6 -lcsound64 -lsndfile -lpthread -lm && ./$(FileName) --csound 
-command.name.3.*=Render piece to soundfile and post-process
+command.name.3.*=Render C++ piece to soundfile and post-process
 command.3.*=g++ --std=c++17 -lstdc++fs -Wno-write-strings -O2 -g "$(FilePath)" -o$(FileName) -I/usr/local/include/csound -lCsoundAC -lcsnd6 -lcsound64 -lsndfile -lpthread -lm && ./$(FileName) --csound --post
-command.name.4.*=Render piece to soundfile and post-process and play 
+command.name.4.*=Render C++ piece to soundfile and post-process and play 
 command.4.*=g++ --std=c++17 -lstdc++fs -Wno-write-strings -O2 -g "$(FilePath)" -o$(FileName) -I/usr/local/include/csound -lCsoundAC -lcsnd6 -lcsound64 -lsndfile -lpthread -lm && ./$(FileName) --csound --post --playwav audacity
 
 # Custom commands for running Csound to dac or soundfile with or without post-processing.
 # It is assumed that the csd filename + .wav becomes the output soundfile and that the root 
 # of the csd filename, with - or _ replaced by spaces, is the title of the piece.
 
-command.name.5.*=Render csd to audio
+command.name.5.*=Render csd piece to audio
 command.5.*=csound "$(FilePath)" -odac
-command.name.6.*=Render csd to soundfile and play
+command.name.6.*=Render csd piece to soundfile and play
 command.6.*=csound "$(FilePath)" -o$(FilePath).wav && audacity $(FilePath).wav
-command.name.7.*=Render csd to soundfile and post-process and play 
+command.name.7.*=Render csd piece to soundfile and post-process and play 
 command.7.*=csound "$(FilePath)" -o$(FilePath).wav && python /home/mkg/csound-extended/post-process.py $(FilePath).wav
 
 
