--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -83,7 +83,7 @@ option(BUILD_CHUA_OPCODES "Build the Chua opcodes" ON)
 option(BUILD_DSSI_OPCODES "Build the DSSI opcodes" ON)
 option(BUILD_EMUGENS_OPCODES "Build emugens opcodes" ON)
 option(BUILD_EXCITER_OPCODES "Build the exciter opcode" ON)
-option(BUILD_FAUST_OPCODES "Build the Faust opcodes" OFF)
+option(BUILD_FAUST_OPCODES "Build the Faust opcodes" ON)
 option(BUILD_FLUID_OPCODES "Build the fluidsynth opcodes" ON)
 option(BUILD_FRAMEBUFFER_OPCODES "Build the framebuffer opcodes" ON)
 option(BUILD_IMAGE_OPCODES "Build the image opcodes" ON)
