--- a/.SciTEUser.properties
+++ b/.SciTEUser.properties
@@ -1898,15 +1898,15 @@ command.go.subsystem.*.inc=0
 # If other libraries turn out to be needed just stick them on the link line here.
 
 command.name.0.*=Build C++ piece
-command.0.*=g++ --std=gnu++17 -lstdc++fs -Wno-write-strings -O2 -g "$(FilePath)" -o$(FileName) -I/usr/local/include/csound -lCsoundAC -lcsnd6 -lcsound64 -lsndfile -lpthread -lm
+command.0.*=g++ -Dlinux --std=gnu++17 -lstdc++fs -Wno-write-strings -O2 -g "$(FilePath)" -o$(FileName) -I/usr/local/include/csound -lCsoundAC -lcsnd6 -lcsound64 -lsndfile -lecl -lgc -lgc -lpthread -ldl -lm
 command.name.1.*=Render C++ piece to audio
-command.1.*=g++ --std=c++17 -lstdc++fs -Wno-write-strings -O2 -g "$(FilePath)" -o$(FileName) -I/usr/local/include/csound -lCsoundAC -lcsnd6 -lcsound64 -lsndfile -lpthread -lm && ./$(FileName) --csound --audio PortAudio --device dac
+command.1.*=g++ -Dlinux --std=c++17 -lstdc++fs -Wno-write-strings -O2 -g "$(FilePath)" -o$(FileName) -I/usr/local/include/csound -lCsoundAC -lcsnd6 -lcsound64 -lsndfile -lecl -lgc -lgc -lpthread -ldl -lm && ./$(FileName) --csound --audio PortAudio --device dac
 command.name.2.*=Render C++ piece to soundfile
-command.2.*=g++ --std=c++17 -lstdc++fs -Wno-write-strings -O2 -g "$(FilePath)" -o$(FileName) -I/usr/local/include/csound -lCsoundAC -lcsnd6 -lcsound64 -lsndfile -lpthread -lm && ./$(FileName) --csound 
+command.2.*=g++ -Dlinux --std=c++17 -lstdc++fs -Wno-write-strings -O2 -g "$(FilePath)" -o$(FileName) -I/usr/local/include/csound -lCsoundAC -lcsnd6 -lcsound64 -lsndfile -lecl -lgc -lgc -lpthread -ldl -lm && ./$(FileName) --csound 
 command.name.3.*=Render C++ piece to soundfile and post-process
-command.3.*=g++ --std=c++17 -lstdc++fs -Wno-write-strings -O2 -g "$(FilePath)" -o$(FileName) -I/usr/local/include/csound -lCsoundAC -lcsnd6 -lcsound64 -lsndfile -lpthread -lm && ./$(FileName) --csound --post
+command.3.*=g++ -Dlinux --std=c++17 -lstdc++fs -Wno-write-strings -O2 -g "$(FilePath)" -o$(FileName) -I/usr/local/include/csound -lCsoundAC -lcsnd6 -lcsound64 -lsndfile -lecl -lgc -lgc -lpthread -ldl -lm && ./$(FileName) --csound --post
 command.name.4.*=Render C++ piece to soundfile and post-process and play 
-command.4.*=g++ --std=c++17 -lstdc++fs -Wno-write-strings -O2 -g "$(FilePath)" -o$(FileName) -I/usr/local/include/csound -lCsoundAC -lcsnd6 -lcsound64 -lsndfile -lpthread -lm && ./$(FileName) --csound --post --playwav audacity
+command.4.*=g++ -Dlinux --std=c++17 -lstdc++fs -Wno-write-strings -O2 -g "$(FilePath)" -o$(FileName) -I/usr/local/include/csound -lCsoundAC -lcsnd6 -lcsound64 -lsndfile -lecl -lgc -lgc -lpthread -ldl -lm && ./$(FileName) --csound --post --playwav audacity
 
 # Custom commands for running Csound to dac or soundfile with or without post-processing.
 # It is assumed that the csd filename + .wav becomes the output soundfile and that the root 
