--- a/.SciTEUser.properties
+++ b/.SciTEUser.properties
@@ -1898,7 +1898,7 @@ command.go.subsystem.*.inc=0
 # If other libraries turn out to be needed just stick them on the link line here.
 
 command.name.0.*=Build C++ piece
-command.0.*=g++ -Dlinux --std=gnu++17 -lstdc++fs -Wno-write-strings -O2 -g "$(FilePath)" -o$(FileName) -I/usr/local/include/csound -lCsoundAC -lcsnd6 -lcsound64 -lsndfile -lecl -lgc -lgc -lpthread -ldl -lm
+command.0.*=g++ -Dlinux --std=gnu++17 -lstdc++fs -Wno-write-strings -I. -O2 -g "$(FilePath)" -o$(FileName) -I/usr/local/include/csound -lCsoundAC -lcsnd6 -lcsound64 -lsndfile -lecl -lgc -lgc -lpthread -ldl -lm
 command.name.1.*=Render C++ piece to audio
 command.1.*=g++ -Dlinux --std=c++17 -lstdc++fs -Wno-write-strings -O2 -g "$(FilePath)" -o$(FileName) -I/usr/local/include/csound -lCsoundAC -lcsnd6 -lcsound64 -lsndfile -lecl -lgc -lgc -lpthread -ldl -lm && ./$(FileName) --csound --audio PortAudio --device dac
 command.name.2.*=Render C++ piece to soundfile
