--- a/.SciTEUser.properties
+++ b/.SciTEUser.properties
@@ -204,7 +204,7 @@ find.command=
 #find.input=$(find.what)
 #if PLAT_GTK
 #	find.command=grep --line-number "$(find.what)" $(find.files)
-find.files=*.c *.cpp *.h *.hpp *.js *.lisp *.py *.cpp *.hpp *.mk *.txt
+find.files=*.c *.cpp *.h *.hpp *.js *.lisp *.lsp *.asd *.cc *.py *.cpp *.hpp *.mk *.txt
 #find.in.files.close.on.find=0
 #find.in.dot=1
 #find.in.binary=1
