--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -1,8 +1,17 @@
 cmake_minimum_required(VERSION 3.5)
 
 message("CMAKE BUILD SYSTEM FOR CSOUND-EXTENDED")
-message("Execute \"cd dependencies;./update-dependencies.sh;cd..\" before build!")
-message("Repeat only when dependencies change.")
+message("For a fresh build, run 'bash fresh-build-linux.sh'")
+#message("To update all dependencies, run cmake with '-DUPDATE_DEPENDENCIES'")
+#if(UPDATE_DEPENDENCIES)
+#    message("Updating all dependencies...")
+#    execute_process(COMMAND "pwd" WORKING_DIRECTORY "${CMAKE_SOURCE_DIR}/dependencies")
+#    execute_process(COMMAND "${CMAKE_SOURCE_DIR}/dependencies/update-dependency-downloads.sh" WORKING_DIRECTORY "${CMAKE_SOURCE_DIR}/dependencies")
+#    execute_process(COMMAND "${CMAKE_SOURCE_DIR}/dependencies/update-dependency-packages.sh" WORKING_DIRECTORY "${CMAKE_SOURCE_DIR}/dependencies")
+#    execute_process(COMMAND "${CMAKE_SOURCE_DIR}/dependencies/update-dependency-submoduless.sh" WORKING_DIRECTORY "${CMAKE_SOURCE_DIR}/dependencies")
+#    execute_process(COMMAND "${CMAKE_SOURCE_DIR}/dependencies/update-dependency-reppositories.sh" WORKING_DIRECTORY "${CMAKE_SOURCE_DIR}/dependencies")
+#    execute_process(COMMAND "${CMAKE_SOURCE_DIR}/dependencies/patch-dependency-sources.sh" WORKING_DIRECTORY "${CMAKE_SOURCE_DIR}/dependencies")
+#endif()
 message("There are NO configuration options in this build.")
 message("But if there ARE configuration variables, set them in the ")
 message(" optional \"custom-variables.cmake\" file in this directory.")
@@ -23,7 +32,7 @@ set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS}  -Wall")
 set(CMAKE_C_FLAGS "${CMAKE_C_FLAGS} -Wall")
 set(CPACK_ARCHIVE_COMPONENT_INSTALL ON)
 set(CMAKE_INSTALL_DEFAULT_COMPONENT_NAME "csound-base")
-add_definitions(-DGMM_VERSION=513)
+#add_definitions(-DGMM_VERSION=513)
 add_definitions(-Dlinux)
 
 # This is used for both Csound and CsoundAC SONAMEs.
