--- a/CsoundHtml5/CMakeLists.txt
+++ b/CsoundHtml5/CMakeLists.txt
@@ -4,4 +4,4 @@ message(STATUS "Building CsoundHtml5...")
 ExternalProject_Add(CsoundHtml5
     SOURCE_DIR "${CMAKE_CURRENT_SOURCE_DIR}/CsoundHtml5"
     CONFIGURE_COMMAND "${qmake} -DQMAKESPEC ${QMAKESPEC}"
-    BUILD_COMMAND "make")
+    BUILD_COMMAND "make CXXFLAGS='-s'")
