--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -235,22 +235,26 @@ set(CPACK_COMPONENTS_ALL_IN_ONE_PACKAGE "OFF")
 set(CPACK_GENERATOR TGZ; DEB)
 set(CPACK_PACKAGE_CONTACT "${CPACK_DEBIAN_PACKAGE_MAINTAINER}")
 set(CPACK_PACKAGE_DESCRIPTION_FILE "${CMAKE_SOURCE_DIR}/README.md")
-set(CPACK_PACKAGE_NAME "csound-extended")
+set(CPACK_PACKAGE_NAME "csound-extended-dev")
 set(CPACK_PACKAGE_VERSION "$ENV{CSOUND_EXTENDED_VERSION}")
-set(CPACK_STRIP_FILES "YES")
+# set(CPACK_STRIP_FILES "YES")
+
+set(CPACK_RESOURCE_FILE_LICENSE "${CMAKE_SOURCE_DIR}/copyright.txt")
+set(CPACK_RESOURCE_FILE_README "${CMAKE_SOURCE_DIR}/README.md")
 
 set(CPACK_DEBIAN_ARCHITECTURE ${CMAKE_SYSTEM_PROCESSOR})
 set(CPACK_DEBIAN_COMPONENT_INSTALL "ON")   
 set(CPACK_DEBIAN_PACKAGE_CONTROL_EXTRA "${CMAKE_SOURCE_DIR}/DEBIAN/triggers")
 set(CPACK_DEBIAN_PACKAGE_CONFLICTS "libcsoundac-dev")
 set(CPACK_DEBIAN_PACKAGE_DEPENDS "python")
-set(CPACK_DEBIAN_PACKAGE_DESCRIPTION "Extends Csound with CsoundHtml5, CsoundAC, cmask, Common Music,
- csound.node for NW.js, csound-wasm, and other features.")
-set(CPACK_DEBIAN_PACKAGE_ENHANCES "csound, libsound64-dev, csound-python")
+set(CPACK_DEBIAN_PACKAGE_DESCRIPTION "Extends Csound with additional features.
+ Additional features include CsoundHtml5, CsoundAC, cmask, Common Music,
+ csound.node for NW.js, csound-wasm, and others.")
+set(CPACK_DEBIAN_PACKAGE_ENHANCES "csound, libsound64-dev, csound-python, csoundqt")
 set(CPACK_DEBIAN_PACKAGE_GENERATE_SHLIBS "ON")
-set(CPACK_DEBIAN_PACKAGE_GENERATE_SHLIBS_POLICY "> =")
+set(CPACK_DEBIAN_PACKAGE_GENERATE_SHLIBS_POLICY ">=")
 set(CPACK_DEBIAN_PACKAGE_HOMEPAGE "https://github.com/gogins/csound-extended")
-set(CPACK_DEBIAN_PACKAGE_LICENSE "https://github.com/gogins/csound-extended")
+set(CPACK_DEBIAN_PACKAGE_LICENSE "${CMAKE_SOURCE_DIR}/copyright.txt")
 set(CPACK_DEBIAN_PACKAGE_MAINTAINER "Michael Gogins <michael.gogins@gmail.com>")
 set(CPACK_DEBIAN_PACKAGE_NAME "${CPACK_PACKAGE_NAME}")
 set(CPACK_DEBIAN_PACKAGE_PRIORITY "optional")
@@ -258,7 +262,7 @@ set(CPACK_DEBIAN_PACKAGE_SHLIBDEPS "ON")
 
 # generate a Debian compliant changelog
 string(TIMESTAMP RFC2822_TIMESTAMP "%a, %d %b %Y %H:%M:%S -0400" UTC)
-set(CHANGELOG_HEADER "csound-extended (${CPACK_PACKAGE_VERSION}) ${DISTRO_CODENAME}\; urgency=high")
+set(CHANGELOG_HEADER "csound-extended-dev (${CPACK_PACKAGE_VERSION}) ${DISTRO_CODENAME}\; urgency=high")
 # two spaces between maintainer and timestamp is NOT a mistake
 set(CHANGELOG_FOOTER " -- ${CPACK_DEBIAN_PACKAGE_MAINTAINER}  ${RFC2822_TIMESTAMP}")
 execute_process(COMMAND bash ${CMAKE_SOURCE_DIR}/git-changelog.sh
@@ -282,6 +286,8 @@ install(DIRECTORY ${CMAKE_SOURCE_DIR}/doc/html
     DESTINATION share/doc/${CPACK_DEBIAN_PACKAGE_NAME})
 install(FILES "${CMAKE_SOURCE_DIR}/debian/changelog.gz"
     DESTINATION "share/doc/${CPACK_DEBIAN_PACKAGE_NAME}")
-
+install(FILES ${CMAKE_SOURCE_DIR}/cmake/cpack/deb/lintian/overrides/csound-extended-dev
+    DESTINATION share/lintian/overrides
+    COMPONENT csound-extended-dev)
 
 include (CPack)
