--- a/CsoundForAndroid/CsoundForAndroid/CsoundAndroid/build.gradle
+++ b/CsoundForAndroid/CsoundForAndroid/CsoundAndroid/build.gradle
@@ -1,13 +1,13 @@
 apply plugin: 'com.android.library'
 
 android {
-    compileSdkVersion 23
-    buildToolsVersion '26.0.2'
+    compileSdkVersion 26
+    buildToolsVersion '26.0.1'
     defaultConfig {
         minSdkVersion 21
         targetSdkVersion 21
         versionCode 2
-        versionName "6.10.0"
+        versionName "6.12.0"
     }
     buildTypes {
         release {
@@ -22,5 +22,5 @@ android {
 }
 
 dependencies {
-    compile fileTree(dir: 'libs', include: ['*.jar'])
+    compile fileTree(include: ['*.jar'], dir: 'libs')
 }
