--- a/CsoundForAndroid/CsoundForAndroid/CsoundApplication/build.gradle
+++ b/CsoundForAndroid/CsoundForAndroid/CsoundApplication/build.gradle
@@ -9,7 +9,7 @@ android {
             storeFile file('CsoundForAndroid.jks')
         }
     }
-    compileSdkVersion 23
+    compileSdkVersion 26
     buildToolsVersion '28.0.3'
     defaultConfig {
         applicationId "com.csounds.Csound6"
@@ -17,6 +17,7 @@ android {
         targetSdkVersion 26
         versionCode 14
         versionName '6.12.0'
+        multiDexEnabled true
     }
     buildTypes {
         release {
@@ -33,9 +34,16 @@ android {
     }
     productFlavors {
     }
+    compileOptions {
+        sourceCompatibility JavaVersion.VERSION_1_6
+        targetCompatibility JavaVersion.VERSION_1_8
+    }
 }
 
 dependencies {
     implementation project(':CsoundAndroid')
     implementation fileTree(include: ['*.jar'], dir: 'libs')
+    implementation 'com.android.support.constraint:constraint-layout:1.0.2'
+    implementation 'com.android.support:support-v4:26.0.0'
+
 }
