Updating for targetSdk (#64).

--- a/CsoundForAndroid/CsoundForAndroid/CsoundApplication/src/main/AndroidManifest.xml
+++ b/CsoundForAndroid/CsoundForAndroid/CsoundApplication/src/main/AndroidManifest.xml
@@ -44,7 +44,7 @@
             android:stopWithTask="true"/>
         <provider
             android:name="android.support.v4.content.FileProvider"
-            android:authorities="com.csounds.Csound6.fileprovider"
+            android:authorities="${applicationId}"
             android:exported="false"
             android:grantUriPermissions="true">
             <meta-data
